--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Supabase Configuration
-SUPABASE_URL=your_project_url_here
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+SUPABASE_URL=https://wffyzltswxtclisthcpd.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=sb_publishable_66jT6RtGZEbwqaEqEEqw5g_JOrpBogw
 
 # Server Configuration
 PORT=3001
